--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -25,21 +25,22 @@
 {% block content %}
 {% if listing %}
 <style>
-  .featured {
-    margin-top: 2rem;
-    padding: 2rem;
-    background-color: #f1faff;
-    border-radius: 12px;
-    max-width: 1000px;
-    margin-left: auto;
-    margin-right: auto;
-  }
+
+.featured {
+  width: 100%;
+  padding: 2rem 4vw;
+  background-color: #f1faff;
+  border-radius: 0;
+  box-sizing: border-box;
+}
+
 
   .listing-photo-box {
     position: relative;
+
     width: 100%;
-    max-width: 600px;
-    height: 300px;
+    max-width: 700px;
+    height: 400px;
     background-color: white;
     border-radius: 10px;
     overflow: hidden;
